--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -13,23 +13,28 @@ Resources:
       GroupName: !Sub UdaPeople-${ID}
       GroupDescription: Allow port 22 and port 3030.
       SecurityGroupIngress:
-        - IpProtocol: tcp
+        - Description: "SSH access"
+          IpProtocol: tcp
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
+        - Description: "Port application backend"
+          IpProtocol: tcp
           FromPort: 3030
           ToPort: 3030
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
+        - Description: "alert-manager"
+          IpProtocol: tcp
           FromPort: 9093
           ToPort: 9093
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
+        - Description: "prometheus server"
+          IpProtocol: tcp
           FromPort: 9090
           ToPort: 9090
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
+        - Description: "prometheus-node-exporter"
+          IpProtocol: tcp
           FromPort: 9100
           ToPort: 9100
           CidrIp: 0.0.0.0/0
