--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,4 +436,4 @@ workflows:
       - cloudfront-update:  
           requires: [smoke-test]
       - cleanup-phase:
-          requires: [cleanup-phase]
+          requires: [cloudfront-update]
