--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -435,3 +435,5 @@ workflows:
           requires: [deploy-frontend, deploy-backend]
       - cloudfront-update:  
           requires: [smoke-test]
+      - cleanup-phase:
+          requires: [cloudfront-update]
